@@ -244,6 +244,12 @@ public:
   */
   EvtId getId() const;
 
+  /**
+  * Returns the PDG id of the particle
+  */
+  
+  int getPDGId() const;
+
   /** 
   * Returns particle type.
   */
